# docs/swagger.json
@@ -419,6 +419,44 @@
             }
         },
         "/user-package/all": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User Package"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "_page",
+                        "name": "_page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "_limit",
+                        "name": "_limit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/userPackage.UserPackage"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -449,10 +487,7 @@
                         "name": "request",
                         "in": "body",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/dto.SearchPurchaseHistoryDto"
                         }
                     }
                 ],
@@ -464,6 +499,109 @@
                             "items": {
                                 "$ref": "#/definitions/userPackage.UserPackage"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/user-package/all/mobile": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User Package"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "_page",
+                        "name": "_page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "_limit",
+                        "name": "_limit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/userPackage.UserPackage"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/user-package/check/expiry-maxpurchase": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User Package"
+                ],
+                "parameters": [
+                    {
+                        "description": "CheckPackageExpiryMaxpurchaseDto",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CheckPackageExpiryMaxpurchaseDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/user-package/{purchaseId}": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User Package"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "purchaseId",
+                        "name": "purchaseId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/userPackage.UserPackage"
                         }
                     }
                 }
@@ -611,6 +749,35 @@
         }
     },
     "definitions": {
+        "dto.CheckPackageDto": {
+            "type": "object",
+            "required": [
+                "package_id",
+                "quantityPurchased"
+            ],
+            "properties": {
+                "package_id": {
+                    "type": "integer"
+                },
+                "quantityPurchased": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.CheckPackageExpiryMaxpurchaseDto": {
+            "type": "object",
+            "required": [
+                "package"
+            ],
+            "properties": {
+                "package": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.CheckPackageDto"
+                    }
+                }
+            }
+        },
         "dto.LoginDto": {
             "type": "object",
             "required": [
@@ -649,6 +816,23 @@
             ],
             "properties": {
                 "machineId": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.SearchPurchaseHistoryDto": {
+            "type": "object",
+            "properties": {
+                "keyword": {
+                    "type": "string"
+                },
+                "keyword2": {
+                    "type": "string"
+                },
+                "keyword3": {
+                    "type": "string"
+                },
+                "keyword4": {
                     "type": "string"
                 }
             }
