# router/userPackage/userPackage.go
@@ -10,5 +10,9 @@ import (
 func SetupRoutes(router fiber.Router) {
     api := router.Group("/user-package")
     api.Use(middleware.JWTProtected, middleware.ValidateAppUser)
+    api.Post("/check/expiry-maxpurchase", userPackage.CheckPackageExpiryMaxpurchase)
+    api.Get("/all/mobile", userPackage.GetAllUserPurchaseHistory)
+    api.Get("/all", userPackage.GetAllPurchaseHistory)
     api.Post("/all", userPackage.SearchAllPurchaseHistory)
+    api.Get("/:purchaseId", userPackage.GetUserPackageById)
 }
